Options: fix blacklist alignment.

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -258,11 +258,6 @@ section > .head {
 
 #blacklist-head {
 	box-sizing: border-box;
-	padding-right: 8px;
-}
-
-#blacklist-head thead {
-	margin-right: 8px;
 }
 
 #blacklist-head th {
